<resources>
<string name="app_name">MyCars</string>
<string name="title_activity_car_details">Car Details</string>
<string name="title_activity_car_edit">Edit Car Details</string>
<string name="action_settings">Settings</string>
<string name="lblCaptionYearStr">Year:</string>
<string name="lblCaptionModelStr">Model:</string>
<string name="lblCaptionOriginStr">Origin:</string>
    <string name="lblCaptionMakeStr">Make:</string>
<string name="spnOriginStr">Edit</string>
<string name="spnOriginAmericanStr">American</string>
<string name="spnOriginJapaneseStr">Japanese</string>
<string name="spnOriginEuropeanStr">European</string>
<string name="btnModsStr">Mods</string>
<string name="btnWishlistStr">Wishlist</string>
<string name="btnEditStr">EDIT</string>
<string-array name="spnOriginArr">
    <item>@string/spnOriginAmericanStr</item>
    <item>@string/spnOriginJapaneseStr</item>
    <item>@string/spnOriginEuropeanStr</item>
</string-array>
</resources>
