<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="yangm.mycars.CarEditActivitysActivity"
    tools:showIn="@layout/activity_car_edit">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnModsStr"
        android:id="@+id/btnMods"
        android:layout_above="@+id/btnWishlist"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWishlistStr"
        android:id="@+id/btnWishlist"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditStr"
        android:id="@+id/btnEdit"
        android:layout_above="@+id/btnMods"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false"
        android:onClick="btnEditOnClick" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnOrigin"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/lblCaptionOrigin"
        android:layout_toRightOf="@+id/lblCaptionModel"
        android:layout_toEndOf="@+id/lblCaptionModel"
        android:entries="@array/spnOriginArr"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Make:"
        android:id="@+id/lblCaptionMake"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Model:"
        android:id="@+id/lblCaptionModel"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/lblCaptionYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Year:"
        android:id="@+id/lblCaptionYear"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/lblCaptionMake"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Origin:"
        android:id="@+id/lblCaptionOrigin"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/lblCaptionModel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMake"
        android:layout_alignTop="@+id/lblCaptionMake"
        android:layout_alignEnd="@+id/txtYear"
        android:layout_alignLeft="@+id/txtYear"
        android:layout_alignStart="@+id/txtYear"
        android:layout_alignParentRight="true"
        android:focusable="true"
        android:longClickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtModel"
        android:layout_alignTop="@+id/lblCaptionModel"
        android:layout_alignEnd="@+id/spnOrigin"
        android:layout_alignLeft="@+id/spnOrigin"
        android:layout_alignStart="@+id/spnOrigin"
        android:layout_alignParentRight="true"
        android:focusable="true"
        android:longClickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtYear"
        android:layout_alignTop="@+id/lblCaptionYear"
        android:layout_alignLeft="@+id/txtModel"
        android:layout_alignStart="@+id/txtModel"
        android:layout_alignEnd="@+id/txtModel"
        android:layout_alignParentRight="true"
        android:focusable="true"
        android:longClickable="true" />

</RelativeLayout>

